syntax = "proto3";

package proto;

option go_package = "/ml_gateway_proto";

service MlGatewayService {
    rpc Text2Vec(Text2VecRequest) returns (Text2VecResponse);
}

message Text2VecRequest {
    string text = 1;
}

message Result {
    string name = 1;
    repeated float embedding = 2;
    float score = 3;
}

message Text2VecResponse {
    repeated Result results = 2;
}
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative mlGateway.proto